# VulkanECSEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
engine/components/: Camera.h  Mesh.h  Transform.h
engine/core/: Engine.cpp  Engine.h  Window.h
engine/ecs/: ComponentPool.h  Registry.h  Types.h
engine/renderer/: Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  VulkanContext.cpp  VulkanContext.h
engine/systems/: FreeFlyCamera.cpp  FreeFlyCamera.h  RenderSystem.cpp  RenderSystem.h
game/: main.cpp
game/board/: Board.cpp  Board.h  MeshFactory.cpp  MeshFactory.h
game/components/: GameComponents.h
game/config/: GameConfig.h
game/systems/: AnimationSystem.cpp  AnimationSystem.h  BoardSystem.cpp  BoardSystem.h  InputSystem.cpp  InputSystem.h
shaders/: mesh.vert
